# Forward_Simulator_for_HIV_evolution

./: .gitignore  README.md  pyproject.toml  setup.cfg
Data/materials/: HXB2_PR.fa  SimuV9_scoring_system_0130.csv  Simu_starting_sequences_2.fa  disc_simu.txt  settings.txt
Data/scripts/: ARGS_description.csv  kmb_unbiased_0122_4.csv  mutation-simulator_V5.py
Installation/: simulator.yml
package/: LICENSE  README.md  pyproject.toml
package/src/simulator_sw_0701/: simu.py  utils.py
src/simulate/: __main__.py  utils.py
src/simulator_sw_0701/: __main__.py  simu.py  treated.py  untreated.py  utils.py
test/: Pathways_5.csv  settings.txt
