

[build-system]
requires = ["setuptools>= 46.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulator_sw_0701"
version = "0.0.8"
authors = [
    {name = "Shiyi Wang", email = "syiwang@uw.edu"},
]
description = "An individual virus-based forward simulator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "numpy",
    "pandas",
    "pysam",
    "joblib",
    "pyfaidx"
]

