[metadata]
name = TO BE DETERMINED
version = attr: simulate.__version__
description = TO BE FILLED
long_description= file: README.md
license = TO BE DETERMINED
author = Shiyi Wang

[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.8
# install_requires = 
#     numpy >= 1.14.0
#     pysam >= 0.21.0


[options.packages.find]
where = src
